@@ -21,7 +21,7 @@ namespace ContractConfigurator.Behaviour
             bool valid = base.Load(configNode);
 
             // Call SpawnKerbal for load behaviour
-            waypointGenerator = WaypointGenerator.Create(configNode, targetBody);
+            waypointGenerator = WaypointGenerator.Create(configNode, targetBody, this);
 
             return valid && waypointGenerator != null;
         }
