@@ -7,6 +7,7 @@ using KSP;
 using Contracts;
 using ContractConfigurator;
 using FinePrint;
+using FinePrint.Utilities;
 
 namespace ContractConfigurator.Behaviour
 {
@@ -19,6 +20,11 @@ namespace ContractConfigurator.Behaviour
         {
             public Waypoint waypoint = new Waypoint();
             public string type = null;
+            public bool randomAltitude = false;
+            public bool waterAllowed = true;
+            public bool forceEquatorial = false;
+            public int nearIndex = -1;
+            public double nearDistance = 0.0;
 
             public WaypointData()
             {
@@ -45,13 +51,22 @@ namespace ContractConfigurator.Behaviour
                 waypoint.longitude = orig.waypoint.longitude;
                 waypoint.name = orig.waypoint.name;
 
+                randomAltitude = orig.randomAltitude;
+                waterAllowed = orig.waterAllowed;
+                forceEquatorial = orig.forceEquatorial;
+                nearIndex = orig.nearIndex;
+                nearDistance = orig.nearDistance;
+                
                 SetContract(contract);
             }
 
             public void SetContract(Contract contract)
             {
-                waypoint.contractReference = contract;
-                waypoint.seed = contract.MissionSeed;
+                if (contract != null)
+                {
+                    waypoint.contractReference = contract;
+                    waypoint.seed = contract.MissionSeed;
+                }
             }
         }
         private List<WaypointData> waypoints = new List<WaypointData>();
@@ -71,30 +86,105 @@ namespace ContractConfigurator.Behaviour
             }
         }
 
-        public static WaypointGenerator Create(ConfigNode configNode, CelestialBody defaultBody)
+        public static WaypointGenerator Create(ConfigNode configNode, CelestialBody defaultBody, WaypointGeneratorFactory factory)
         {
             WaypointGenerator wpGenerator = new WaypointGenerator();
 
-            foreach (string type in new string[] { "RANDOM_WAYPOINT" })
+            bool valid = true;
+            int index = 0;
+            foreach (ConfigNode child in configNode.GetNodes())
             {
-                foreach (ConfigNode child in configNode.GetNodes(type))
+                int count = child.HasValue("count") ? Convert.ToInt32(child.GetValue("count")) : 1;
+                for (int i = 0; i < count; i++)
                 {
-                    WaypointData wpData = new WaypointData(type);
+                    WaypointData wpData = new WaypointData(child.name);
 
                     // Get target body
+                    if (defaultBody ==  null)
+                    {
+                        valid &= ConfigNodeUtil.ValidateMandatoryField(child, "targetBody", factory);
+                    }
                     wpData.waypoint.celestialName = (child.HasValue("targetBody") ?
                         ConfigNodeUtil.ParseCelestialBody(child, "targetBody") : defaultBody).name;
 
-                    // Get other waypoint attributes
+                    // Get name
+                    valid &= ConfigNodeUtil.ValidateMandatoryField(child, "name", factory);
                     wpData.waypoint.name = child.GetValue("name");
+
+                    // Get icon
+                    valid &= ConfigNodeUtil.ValidateMandatoryField(child, "icon", factory);
                     wpData.waypoint.id = child.GetValue("icon");
+
+                    // Track the index
+                    wpData.waypoint.index = index++;
+
+                    // Get altitude
+                    if (child.HasValue("altitude"))
+                    {
+                        wpData.waypoint.altitude = Convert.ToDouble(child.GetValue("altitude"));
+                    }
+                    else
+                    {
+                        wpData.randomAltitude = true;
+                    }
+
+                    // Get settings that differ by type
+                    if (child.name == "WAYPOINT")
+                    {
+                        // Get lat/long
+                        valid &= ConfigNodeUtil.ValidateMandatoryField(child, "latitude", factory);
+                        valid &= ConfigNodeUtil.ValidateMandatoryField(child, "longitude", factory);
+                        wpData.waypoint.latitude = Convert.ToDouble(child.GetValue("latitude"));
+                        wpData.waypoint.longitude = Convert.ToDouble(child.GetValue("longitude"));
+                    }
+                    else if (child.name == "RANDOM_WAYPOINT")
+                    {
+                        // Get settings for randomization
+                        if (child.HasValue("waterAllowed"))
+                        {
+                            wpData.waterAllowed = Convert.ToBoolean(child.GetValue("waterAllowed"));
+                        }
+                        if (child.HasValue("forceEquatorial"))
+                        {
+                            wpData.forceEquatorial = Convert.ToBoolean(child.GetValue("forceEquatorial"));
+                        }
+                    }
+                    else if (child.name == "RANDOM_WAYPOINT_NEAR")
+                    {
+                        // Get settings for randomization
+                        if (child.HasValue("waterAllowed"))
+                        {
+                            wpData.waterAllowed = Convert.ToBoolean(child.GetValue("waterAllowed"));
+                        }
+
+                        // Get near waypoint details
+                        valid &= ConfigNodeUtil.ValidateMandatoryField(child, "nearIndex", factory);
+                        valid &= ConfigNodeUtil.ValidateMandatoryField(child, "nearDistance", factory);
+                        wpData.nearIndex = Convert.ToInt32(child.GetValue("nearIndex"));
+                        wpData.nearDistance = Convert.ToDouble(child.GetValue("nearDistance"));
+                    }
+                    else
+                    {
+                        throw new ArgumentException("Unrecognized waypoint node: '" + child.name + "'");
+                    }
 
                     // Add to the list
                     wpGenerator.waypoints.Add(wpData);
                 }
             }
 
-            return wpGenerator;
+            return valid ? wpGenerator : null;
+        }
+
+        protected override void OnUnregister()
+        {
+            base.OnUnregister();
+
+            foreach (WaypointData wpData in waypoints)
+            {
+                WaypointManager.RemoveWaypoint(wpData.waypoint);
+            }
+
         }
 
         protected override void OnOffered()
@@ -107,56 +197,33 @@ namespace ContractConfigurator.Behaviour
                 if (wpData.type == "RANDOM_WAYPOINT")
                 {
                     // Generate the position
-                    Debug.Log("adding info for a random waypoint");
-                    WaypointManager.ChooseRandomPosition(out wpData.waypoint.latitude, out wpData.waypoint.longitude, wpData.waypoint.celestialName, true, false, random);
+                    WaypointManager.ChooseRandomPosition(out wpData.waypoint.latitude, out wpData.waypoint.longitude,
+                        wpData.waypoint.celestialName, wpData.waterAllowed, wpData.forceEquatorial, random);
+                }
+                else if (wpData.type == "RANDOM_WAYPOINT_NEAR")
+                {
+                    Waypoint nearWaypoint = waypoints[wpData.nearIndex].waypoint;
+                    WaypointManager.ChooseRandomPositionNear(out wpData.waypoint.latitude, out wpData.waypoint.longitude,
+                        nearWaypoint.latitude, nearWaypoint.longitude, wpData.waypoint.celestialName,
+                        wpData.nearDistance, wpData.waterAllowed, random);
                 }
 
-                CreateWayPoint(wpData.waypoint);
-                Debug.Log("Generated a waypoint at (" + wpData.waypoint.latitude + ", " + wpData.waypoint.longitude + ") on " + wpData.waypoint.celestialName);
+                // Set altitude
+                if (wpData.randomAltitude)
+                {
+                    CelestialBody body = FlightGlobals.Bodies.Where<CelestialBody>(b => b.name == wpData.waypoint.celestialName).First();
+                    if (body.atmosphere)
+                    {
+                        wpData.waypoint.altitude = random.NextDouble() * (body.maxAtmosphereAltitude);
+                    }
+                    else
+                    {
+                        wpData.waypoint.altitude = 0.0;
+                    }
+                }
+
+                AddWayPoint(wpData.waypoint);
             }
-        }
-
-        protected override void OnAccepted()
-        {
-        }
-
-        protected override void OnCancelled()
-        {
-            RemoveKerbals();
-        }
-
-        protected override void OnDeadlineExpired()
-        {
-            RemoveKerbals();
-        }
-
-        protected override void OnDeclined()
-        {
-            RemoveKerbals();
-        }
-
-        protected override void OnGenerateFailed()
-        {
-            RemoveKerbals();
-        }
-
-        protected override void OnOfferExpired()
-        {
-            RemoveKerbals();
-        }
-
-        protected override void OnWithdrawn()
-        {
-            RemoveKerbals();
-        }
-
-        private void RemoveKerbals()
-        {
-/*            foreach (KerbalData kerbal in kerbals)
-            {
-                HighLogic.CurrentGame.CrewRoster.Remove(kerbal.crewMember.name);
-                kerbal.crewMember = null;
-            }*/
         }
 
         protected override void OnLoad(ConfigNode configNode)
@@ -174,10 +241,13 @@ namespace ContractConfigurator.Behaviour
                 wpData.waypoint.latitude = Convert.ToDouble(child.GetValue("latitude"));
                 wpData.waypoint.longitude = Convert.ToDouble(child.GetValue("longitude"));
                 wpData.waypoint.altitude = Convert.ToDouble(child.GetValue("altitude"));
+                wpData.waypoint.index = Convert.ToInt32(child.GetValue("index"));
+
+                // Set contract data
                 wpData.SetContract(contract);
 
                 // Create additional waypoint details
-                CreateWayPoint(wpData.waypoint);
+                AddWayPoint(wpData.waypoint);
 
                 // Add to the global list
                 waypoints.Add(wpData);
@@ -199,21 +269,31 @@ namespace ContractConfigurator.Behaviour
                 child.AddValue("latitude", wpData.waypoint.latitude);
                 child.AddValue("longitude", wpData.waypoint.longitude);
                 child.AddValue("altitude", wpData.waypoint.altitude);
+                child.AddValue("index", wpData.waypoint.index);
 
                 configNode.AddNode(child);
             }
         }
 
-        private void CreateWayPoint(Waypoint waypoint)
+        private void AddWayPoint(Waypoint waypoint)
         {
-            Debug.Log("Creating a waypoint.");
-            waypoint.altitude = 0.0;
-            waypoint.isOnSurface = true;
-            waypoint.index = 0;
+            // No contract, no waypoint
+            if (waypoint.contractReference == null)
+            {
+                return;
+            }
 
-            // TODO - needs to show in flight too
-            if (HighLogic.LoadedScene == GameScenes.TRACKSTATION)
+            // Always surface and navigatable
+            waypoint.isOnSurface = true;
+            waypoint.isNavigatable = true;
+
+            // Show only active waypoints in flight, but show offered as well in the tracking station
+            if (HighLogic.LoadedScene == GameScenes.FLIGHT && contract.ContractState == Contract.State.Active ||
+                HighLogic.LoadedScene == GameScenes.TRACKSTATION &&
+                (contract.ContractState == Contract.State.Offered || contract.ContractState == Contract.State.Active))
+            {
                 WaypointManager.AddWaypoint(waypoint);
+            }
         }
     }
 }
