@@ -56,6 +56,7 @@
     <Compile Include="ContractRequirement\HasCrewRequirement.cs" />
     <Compile Include="ExpressionParser.cs" />
     <Compile Include="ContractBehaviour\SpawnKerbal.cs" />
+    <Compile Include="IContractConfiguratorFactory.cs" />
     <Compile Include="ParameterFactory\VesselMassFactory.cs" />
     <Compile Include="PersistentDataStore.cs" />
     <Compile Include="ContractParameter\Timer.cs" />
