@@ -17,6 +17,8 @@ CONTRACT_TYPE
     rewardFunds = 1000000.0
     rewardScience = 100.0
 
+    maxSimultaneous = 1
+
     // The RecoverKerbal parameter is met when the named Kerbal is "recovered" (ie. goes back
     // in to the available list at the astronaut complex).  This is from the Squad "rescue"
     // contracts.
@@ -38,23 +40,102 @@ CONTRACT_TYPE
         name = WaypointGenerator
         type = WaypointGenerator
 
-        // Use this to generate a waypoint with random coordinate
-        RANDOM_WAYPOINT
+        // Use this to generate a waypoint with fixed coordinates
+        WAYPOINT
         {
             // The name of the waypoint - displayed on the marker
-            name = A waypoint on Kerbin
+            name = Kerbal Space Center
+
+            // Body for the waypoint - defaulted from the contract if not
+            // supplied.
+            targetBody = Kerbin
 
             // The icon to use when displaying the waypoint.  At the moment
             // (0.90), this can only be icons under Squad/Contracts/Icons.
             // Perhaps that will change in a future release.
             icon = thermometer
 
-            // The altitude of the waypoint
-            // TODO - default is random, set to zero for landed
+            // The altitude of the waypoint.
+            // Default: A random value between 0.0 and the atmosphere ceiling.
+            // If there's no atmosphere, then always 0.0
+            altitude = 0.0
+
+            // The coordinates.
+            latitude = -0.102668048654
+            longitude = -74.5753856554
+        }
+
+        // Use this to generate a waypoint with random coordinates
+        RANDOM_WAYPOINT
+        {
+            // The name of the waypoint - displayed on the marker
+            name = A waypoint on Kerbin
 
             // Body for the waypoint - defaulted from the contract if not
             // supplied.
             targetBody = Kerbin
+
+            // The number of waypoints to generate.
+            // Default = 1
+            count = 1
+
+            // The icon to use when displaying the waypoint.  At the moment
+            // (0.90), this can only be icons under Squad/Contracts/Icons.
+            // Perhaps that will change in a future release.
+            icon = thermometer
+
+            // The altitude of the waypoint.
+            // Default: A random value between 0.0 and the atmosphere ceiling.
+            // If there's no atmosphere, then always 0.0
+            altitude = 0.0
+
+            // Whether the waypoint generated can be on water
+            // Default = true
+            waterAllowed = false
+
+            // Force the waypoint to fall along the equator.  For boring
+            // contracts.
+            // Default = false
+            forceEquatorial = false
+        }
+
+        // Use this to generate a waypoint with random coordinates, but near
+        // another waypoint.
+        RANDOM_WAYPOINT_NEAR
+        {
+            // The name of the waypoint - displayed on the marker
+            name = A waypoint near something
+
+            // Body for the waypoint - defaulted from the contract if not
+            // supplied.
+            targetBody = Kerbin
+
+            // The number of waypoints to generate.
+            // Default = 1
+            count = 2
+
+            // The icon to use when displaying the waypoint.  At the moment
+            // (0.90), this can only be icons under Squad/Contracts/Icons.
+            // Perhaps that will change in a future release.
+            icon = thermometer
+
+            // The altitude of the waypoint.
+            // Default: A random value between 0.0 and the atmosphere ceiling.
+            // If there's no atmosphere, then always 0.0
+            altitude = 0.0
+
+            // Whether the waypoint generated can be on water
+            // Default = true
+            waterAllowed = false
+
+            // Zero based index of the waypoint to generate near.  Must be a
+            // waypoint with index < this waypoint.  Start counting from the
+            // first waypoint in the BEHAVIOUR, and count 1 for each value of
+            // the count parameter (if it exists).
+            nearIndex = 1
+
+            // Maximum distance in meters from the 'near' waypoint.
+            nearDistance = 25000.0
         }
     }
 }
