@@ -1,4 +1,5 @@
 Contract Configurator 0.4.0
+- Added WaypointGenerator behaviour.  Allows creation of waypoints.
 - Added HasCrew requirement.  Allows filtering on trait, experience level and count.
 - Updated HasCrew parameter to support trait and experience level filtering.
 - Added VesselMass parameter.
